--- a/server/package.json
+++ b/server/package.json
@@ -2,18 +2,18 @@
   "name": "bank-server",
   "version": "0.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
-    "dev": "nodemon ./bin/www",
-    "start": "node ./bin/www"
+    "dev": "nodemon ./app.js",
+    "start": "node ./app.js"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
-    "debug": "~2.6.9",
-    "express": "~4.16.1",
-    "http-errors": "~1.6.3",
-    "morgan": "~1.9.1"
+    "express": "~4.16.1"
   },
   "devDependencies": {
+    "dotenv": "^8.2.0",
+    "eslint": "^7.14.0",
     "nodemon": "^2.0.6"
   }
 }
