--- a/server/package.json
+++ b/server/package.json
@@ -4,11 +4,11 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "nodemon ./app.js",
+    "dev": "nodemon --trace-warnings ./app.js",
     "start": "node ./app.js"
   },
   "dependencies": {
-    "cookie-parser": "~1.4.4",
+    "body-parser": "^1.19.0",
     "express": "~4.16.1"
   },
   "devDependencies": {
